correct split example error in tutorial

--- a/qual/index.html
+++ b/qual/index.html
@@ -1119,10 +1119,10 @@
                     <template #edit>
                         <edit
                             type="split"
-                            split_edit="insertion"
+                            split_edit="insertion2"
                             simplify=false
                             span="and"
-                            explanation="delete `and` is associated with this split edit."
+                            explanation="insert `and` and `But they` are associated with this split edit."
                             ></edit>
                     </template>
                 </example-sent>
