fix title and disabled buttons

--- a/adjudication.html
+++ b/adjudication.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Structure Inspection</title>
+    <title>Edit Adjudication</title>
     <script src="https://code.jquery.com/jquery-3.5.1.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
@@ -190,7 +190,7 @@ iframe {
             $("<style>")
             .prop("type", "text/css")
             .html("\
-            .add_button, .file-download, .operation {\
+            .add_button, .file-download, .operation, .file-upload {\
                 opacity: 20%; \
                 pointer-events: none;\
             }\
